2022-10-12T02:26:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3231583691 # 127
* notice: last 14d: unq all: 2 17
* notice: prev accum: outdated-unq outdated-all / unq all: 51 176 / 61 192
* notice: next accum: outdated-unq outdated-all / unq all: 51 176 / 61 193
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-10-11]

2022-10-11T16:35:15Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3228607771
* notice: last 14d: unq all: 2 16
* notice: prev accum: outdated-unq outdated-all / unq all: 50 174 / 60 190
* notice: next accum: outdated-unq outdated-all / unq all: 51 176 / 61 192
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-09-27] / [2022-10-11]

2022-10-11T08:32:46Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3225314087
* notice: last 14d: unq all: 2 16
* notice: prev accum: outdated-unq outdated-all / unq all: 50 174 / 60 191
* notice: next accum: outdated-unq outdated-all / unq all: 50 174 / 60 190
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-09-27]

2022-10-11T02:08:33Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3223629618
* notice: last 14d: unq all: 2 17
* notice: prev accum: outdated-unq outdated-all / unq all: 50 174 / 60 190
* notice: next accum: outdated-unq outdated-all / unq all: 50 174 / 60 191
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-10-10]

2022-10-10T16:35:12Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3220931007