@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-12T02:26:08Z",
+  "timestamp" : "2022-10-12T08:29:37Z",
   "count_outdated" : 176,
   "uniques_outdated" : 51,
-  "count" : 193,
+  "count" : 192,
   "uniques" : 61,
   "clones" : [
     {
       "timestamp": "2022-09-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
