@@ -1,10 +1,10 @@
 {
-  "count": 17,
+  "count": 16,
   "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-09-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
