@@ -1,3 +1,11 @@
+2022-10-12T08:29:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3233180574 # 128
+* notice: last 14d: unq all: 2 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 51 176 / 61 193
+* notice: next accum: outdated-unq outdated-all / unq all: 51 176 / 61 192
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-09-28]
+
 2022-10-12T02:26:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3231583691 # 127
 * notice: last 14d: unq all: 2 17
